parser/tests/cases/snapshots/cases__errors__emit_no_args.snap
---
source: parser/tests/cases/errors.rs
expression: err

---
error: unexpected end of file
  ┌─ emit_no_args:1:7
  │
1 │ emit x
  │       ^


